QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Changing current JACK buffer size from Setup dialog
  (cf. Settings / Frames/Period) may now take effect
  just immediately ;) (EXPERIMENTAL)

- An 'Apply' button as been added to the Setup dialog;
  ask whether to restart the JACK audio server, if any
  settings are changed. (EXPERIMENTAL)

- Added alternate yet non-official CMake build option.
  (EXPERIMENTAL)

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Command line arguments (--start, --preset=[label] and
  --active-patchbay=[path]) are passed and take effect
  on the current singleton/unique application instance,
  when enabled and already running. (EXPERIMENTAL)

- System-tray icon context menu has been refactored to
  be exactly the same as the main-window context menu
  that is re-instantiated on demand. (EXPERIMENTAL)

- Make sure compiler flags comply to c++11 as standard.


0.5.9  2019-07-12  A Summer'19 Release.

- Updated for the newer Qt5 translation tools (>= 5.13).

- Configure updated to check for qtchooser availability.



0.5.8  2019-05-25  A Spring'19 Release.

- When enabled the current default preset settings are
  now read from the last known JACK D-BUS configuration.

- Minor update to Debian packaging control file.

- Removed all the remaining leftovers of old pre-FFADO
  'freebob' driver support.


0.5.7  2019-03-11  A Spring-Break'19 Release.

- Graph node and port title renaming and nodes position
  move changes are now undo/redo-able.

- Graph client and port title in-place renaming is now
  integrated to native aliases and JACK metadata (aka.
  pretty-names).
  
- Refactored all native client/port name aliases.

- Re-defined all main application UNIX signal handling.


0.5.6  2019-03-11  Pre-LAC2019 Release Frenzy.

- Refactored all singleton/unique application instance
  setup logic away from X11/Xcb hackery.
